--- a/WCell.Terminal/WCell.Terminal.csproj
+++ b/WCell.Terminal/WCell.Terminal.csproj
@@ -71,6 +71,7 @@
   <ItemGroup>
     <Compile Include="ArgumentList.cs" />
     <Compile Include="Check.cs" />
+    <Compile Include="SysTrayNotifyIcon.cs" />
     <Compile Include="TerminalConfiguration.cs" />
     <Compile Include="WCellConfig.cs" />
     <Compile Include="ProcessOutputEventArgs.cs" />
@@ -109,7 +110,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\WCell.Terminal.ico" />
+    <EmbeddedResource Include="Resources\WCell.Terminal.ico" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Framework.2.0">
