* using AddApplicationExitHandler from WCell.Util instead of own implementation * disposing of SysTray icon before ApplicationExit, fixed also a crash when running Terminal outside IDE * refactored TerminalIrcClient to IRCInterface + added Console colors for AuthServer and RealmServer, they are stripped when output is captured + added revision number in Console title + added SysTray icon text * fixed bug that didn't allow the timestamp to update + added possibility to set Console width, height, center on screen * moved IRC Perform stuff to Config.xml, added MSG and MODE actions, ChannelList

--- a/WCell.Terminal/WCell.Terminal.csproj
+++ b/WCell.Terminal/WCell.Terminal.csproj
@@ -39,6 +39,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <UseVSHostingProcess>false</UseVSHostingProcess>
+    <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -47,12 +48,9 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <UseVSHostingProcess>false</UseVSHostingProcess>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="NLog, Version=1.0.0.505, Culture=neutral, PublicKeyToken=04f2a0efba3ae860, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\WCellHeroes\Libraries\Source\NLog\bin\Debug\NLog.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -82,7 +80,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TerminalIrcClient.cs" />
+    <Compile Include="IRCInterface.cs" />
     <Compile Include="TerminalMain.cs" />
     <Compile Include="WCellVariableDefinition.cs" />
     <Compile Include="Utils.cs" />
