+ added the possibility to set console position in Config.xml when ConsoleCenterOnScreen is False + added NLog.dll reference to SVN so it can compile properly * handling exceptions when Config.xml has incorrect paths

--- a/WCell.Terminal/WCell.Terminal.csproj
+++ b/WCell.Terminal/WCell.Terminal.csproj
@@ -144,6 +144,9 @@
     <None Include="Resources\LerosC.fon">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="WCell.Terminal.log">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
